# Django-Project

./: .dockerignore  .gitignore  Makefile  pyproject.toml
core/api/: filtres.py  schemas.py  urls.py
core/api/v1/: urls.py
core/api/v1/customers/: handlers.py
core/api/v1/products/: filters.py  handlers.py  schamas.py
core/apps/common/: exceptions.py  models.py
core/apps/customers/: admin.py  entities.py  models.py
core/apps/customers/exceptions/: codes.py
core/apps/customers/migrations/: 0001_initial.py
core/apps/customers/services/: auth.py  codes.py  customer.py  senders.py
core/apps/products/: admin.py
core/apps/products/migrations/: 0001_initial.py  0002_alter_product_options.py
core/apps/products/models/: __init__.py  products.py
core/apps/products/services/: products.py
core/project/: urls.py
core/project/settings/: main.py
docker_compose/: storages.yaml
tests/factories/: products.py
tests/services/: conftest.py  test_project.py
