[tool.poetry]
name = "django-project"
version = "0.1.0"
description = ""
authors = ["misha9991310 <miplik@yandex.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.7"
django-environ = "^0.11.2"
psycopg2-binary = "^2.9.9"
django-ninja = "^1.2.2"


[tool.poetry.dev-dependencies]
Faker = "^26.2.0"
pytest = "^8.3.2"
pytest-django = "^4.8.0"
factory-boy = "^3.3.0"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "core.project.settings.local"
